Add project.scripts entry point

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,6 +31,9 @@ Documentation = "https://github.com/wmelvin/masht#readme"
 Issues = "https://github.com/wmelvin/masht/issues"
 Source = "https://github.com/wmelvin/masht"
 
+[project.scripts]
+masht = "masht:md_to_html.main"
+
 [tool.hatch.version]
 path = "src/masht/__about__.py"
 
