--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,7 +24,7 @@ classifiers = [
   "Programming Language :: Python :: Implementation :: CPython",
   "Programming Language :: Python :: Implementation :: PyPy",
 ]
-dependencies = [ "markdown" ]
+dependencies = [ "mistune" ]
 
 [project.urls]
 Documentation = "https://github.com/wmelvin/masht#readme"
