Use mistune.html for table support and update config

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,7 @@ name = "masht"
 dynamic = ["version"]
 description = 'Markdown AS HTml'
 readme = "README.md"
-requires-python = ">=3.7"
+requires-python = ">=3.9"
 license = "MIT"
 keywords = [ "markdown", "html", "converter"]
 authors = [
@@ -16,11 +16,10 @@ authors = [
 classifiers = [
   "Development Status :: 4 - Beta",
   "Programming Language :: Python",
-  "Programming Language :: Python :: 3.7",
-  "Programming Language :: Python :: 3.8",
   "Programming Language :: Python :: 3.9",
   "Programming Language :: Python :: 3.10",
   "Programming Language :: Python :: 3.11",
+  "Programming Language :: Python :: 3.12",
   "Programming Language :: Python :: Implementation :: CPython",
   "Programming Language :: Python :: Implementation :: PyPy",
 ]
@@ -55,15 +54,14 @@ cov = [
 ]
 
 [[tool.hatch.envs.test.matrix]]
-python = ["3.8", "3.9", "3.10", "3.11", "3.12"]
+python = ["3.9", "3.10", "3.11", "3.12"]
 
 [[tool.hatch.envs.all.matrix]]
-python = ["3.8", "3.9", "3.10", "3.11"]
+python = ["3.9", "3.10", "3.11", "3.12"]
 
 [tool.hatch.envs.lint]
 detached = true
 dependencies = [
-  "black>=23.1.0",
   "mypy>=1.0.0",
   "ruff>=0.0.243",
 ]
@@ -71,10 +69,8 @@ dependencies = [
 typing = "mypy --install-types --non-interactive {args:src/masht tests}"
 style = [
   "ruff {args:.}",
-  "black --check --diff {args:.}",
 ]
 fmt = [
-  "black {args:.}",
   "ruff --fix {args:.}",
   "style",
 ]
@@ -83,13 +79,13 @@ all = [
   "typing",
 ]
 
-[tool.black]
-target-version = ["py37"]
-line-length = 120
-skip-string-normalization = true
+# [tool.black]
+# target-version = ["py37"]
+# line-length = 120
+# skip-string-normalization = true
 
 [tool.ruff]
-target-version = "py37"
+target-version = "py39"
 line-length = 120
 select = [
   "A",
@@ -127,6 +123,8 @@ ignore = [
   "S105", "S106", "S107",
   # Ignore complexity
   "C901", "PLR0911", "PLR0912", "PLR0913", "PLR0915",
+  # Print found
+  "T201",
 ]
 unfixable = [
   # Don't touch unused imports
