--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,28 +1,16 @@
 [build-system]
-requires = ["hatchling"]
-build-backend = "hatchling.build"
+requires = ["setuptools"]
+build-backend = "setuptools.build_meta"
 
 [project]
 name = "masht"
 dynamic = ["version"]
-description = 'Markdown AS HTml'
+description = 'Markdown AS HTml: Creates a HTML version of a Markdown file.'
 readme = "README.md"
 requires-python = ">=3.9"
-license = "MIT"
+license = {text = "MIT"}
 keywords = [ "markdown", "html", "converter"]
-authors = [
-  { name = "Bill Melvin", email = "bill@sbillmelvin.com" },
-]
-classifiers = [
-  "Development Status :: 4 - Beta",
-  "Programming Language :: Python",
-  "Programming Language :: Python :: 3.9",
-  "Programming Language :: Python :: 3.10",
-  "Programming Language :: Python :: 3.11",
-  "Programming Language :: Python :: 3.12",
-  "Programming Language :: Python :: Implementation :: CPython",
-  "Programming Language :: Python :: Implementation :: PyPy",
-]
+authors = [ { name = "Bill Melvin", email = "bill@sbillmelvin.com" } ]
 dependencies = [ "mistune" ]
 
 [project.urls]
@@ -33,129 +21,42 @@ Source = "https://github.com/wmelvin/masht"
 [project.scripts]
 masht = "masht:md_to_html.main"
 
-[tool.hatch.version]
-path = "src/masht/__about__.py"
+[tool.setuptools.dynamic]
+version = {attr = "masht.__about__.__version__"}
 
-[tool.hatch.envs.default]
-dependencies = [
-  "coverage[toml]>=6.5",
-  "pytest",
-]
-[tool.hatch.envs.default.scripts]
-test = "pytest {args:tests}"
-test-cov = "coverage run -m pytest {args:tests}"
-cov-report = [
-  "- coverage combine",
-  "coverage report",
-]
-cov = [
-  "test-cov",
-  "cov-report",
-]
-
-[[tool.hatch.envs.test.matrix]]
-python = ["3.9", "3.10", "3.11", "3.12"]
-
-[[tool.hatch.envs.all.matrix]]
-python = ["3.9", "3.10", "3.11", "3.12"]
-
-[tool.hatch.envs.lint]
-detached = true
-dependencies = [
-  "mypy>=1.0.0",
-  "ruff>=0.0.243",
-]
-[tool.hatch.envs.lint.scripts]
-typing = "mypy --install-types --non-interactive {args:src/masht tests}"
-style = [
-  "ruff {args:.}",
-]
-fmt = [
-  "ruff --fix {args:.}",
-  "style",
-]
-all = [
-  "style",
-  "typing",
-]
-
-# [tool.black]
-# target-version = ["py37"]
-# line-length = 120
-# skip-string-normalization = true
+[tool.uv]
+dev-dependencies = ["pytest", "ruff"]
 
 [tool.ruff]
-target-version = "py39"
-line-length = 120
+line-length = 88
+indent-width = 4
+
+[tool.ruff.lint]
 select = [
-  "A",
-  "ARG",
-  "B",
-  "C",
-  "DTZ",
-  "E",
-  "EM",
-  "F",
-  "FBT",
-  "I",
-  "ICN",
-  "ISC",
-  "N",
-  "PLC",
-  "PLE",
-  "PLR",
-  "PLW",
-  "Q",
-  "RUF",
-  "S",
-  "T",
-  "TID",
-  "UP",
-  "W",
-  "YTT",
+    "A",    # flake8-builtins
+    "B",    # flake8-bugbear
+    "C4",   # flake8-comprehensions
+    "E",    # pycodestyle errors
+    "F",    # Pyfakes
+    "FA",   # flake8-future-annotations
+    "I",    # isort
+    "ISC",  # flake8-implicit-str-concat
+    "PERF", # Perflint
+    "PL",   # Pylint
+    "PTH",  # flake8-use-pathlib
+    "PYI",  # flake8-pyi
+    "RET",  # flake8-return
+    "S",    # flake8-bandit
+    "SIM",  # flake8-simplify
+    "W"     # Warning
 ]
+# extend-select = ["ALL"]
 ignore = [
-  # Allow non-abstract empty methods in abstract base classes
-  "B027",
-  # Allow boolean positional values in function calls, like `dict.get(... True)`
-  "FBT003",
-  # Ignore checks for possible passwords
-  "S105", "S106", "S107",
-  # Ignore complexity
-  "C901", "PLR0911", "PLR0912", "PLR0913", "PLR0915",
-  # Print found
-  "T201",
-]
-unfixable = [
-  # Don't touch unused imports
-  "F401",
+    "ISC001" # single-line-implicit-string-concatenation
 ]
 
-[tool.ruff.isort]
-known-first-party = ["masht"]
-
-[tool.ruff.flake8-tidy-imports]
-ban-relative-imports = "all"
-
-[tool.ruff.per-file-ignores]
-# Tests can use magic values, assertions, and relative imports
-"tests/**/*" = ["PLR2004", "S101", "TID252"]
-
-[tool.coverage.run]
-source_pkgs = ["masht", "tests"]
-branch = true
-parallel = true
-omit = [
-  "src/masht/__about__.py",
-]
-
-[tool.coverage.paths]
-masht = ["src/masht", "*/masht/src/masht"]
-tests = ["tests", "*/masht/tests"]
-
-[tool.coverage.report]
-exclude_lines = [
-  "no cov",
-  "if __name__ == .__main__.:",
-  "if TYPE_CHECKING:",
+[tool.ruff.lint.per-file-ignores]
+"**/test_*.py" = [
+    "S101",     # assert
+    "PLR2004",  # magic value
 ]
