--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,7 @@ requires-python = ">=3.9"
 license = {text = "MIT"}
 keywords = [ "markdown", "html", "converter"]
 authors = [ { name = "Bill Melvin", email = "bill@sbillmelvin.com" } ]
-dependencies = [ "mistune" ]
+dependencies = [ "chardet", "mistune" ]
 
 [project.urls]
 Documentation = "https://github.com/wmelvin/masht#readme"
